[project]
name = "api-to-bq-dlt"
version = "0.1.0"
description = "Ingestion de données REST API vers BigQuery avec dlt"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dlt[bigquery,restapi]>=1.18.2",
    "dotenv>=0.9.9",
    "google-cloud-logging>=3.11.0",
    "google-cloud-bigquery-storage>=2.26.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "google-cloud-secret-manager>=2.26.0",
    "psutil>=7.2.2",
]
